# docker_airflow_GCP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
airflow/: .gitignore  docker-compose.yaml  readme.md
airflow/dags/: dag.py
airflow/logs/scheduler/: latest
airflow/new_dags/: dag.py
docker_airflow_gcp/: Dockerfile  docker-compose.yaml
terraform/: .gitignore  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/.terraform/: terraform.tfstate
