[tool.poetry]
name = "airflow-gcp-docker"
version = "0.1.0"
description = ""
authors = ["pereza <alejandro.perez@socialbakers.com>"]
readme = "README.md"
packages = [{include = "airflow_gcp_docker"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "==1.3.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0"
mypy = "^1.0.1"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
