[tool.poetry]
name = "airflow-gcp-docker"
version = "0.1.0"
description = ""
authors = ["pereza <alejandro.perez@socialbakers.com>"]
readme = "README.md"
packages = [{include = "airflow_gcp_docker"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.9.2"
pandas = "==1.3.5"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.ccl/nexus/repository/pypi-hosted/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 150
