[tool.poetry]
name = "airflow-gcp-docker"
version = "0.1.0"
description = ""
authors = ["pereza <alejandro.perez@socialbakers.com>"]
readme = "README.md"
packages = [{include = "airflow_gcp_docker"}]

[tool.poetry.dependencies]
python = "^3.11.2"
pandas = ">=1.2.4"
matplotlib ="*"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^5.0"
pre-commit = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 150
